test2-2023-04-16.log
regress/test2.fir:247424:17: error: use of unknown declaration 'validif'
    tmp20070 <= validif(head(UInt<3>(6), 1), SInt<24>("b-11111101000010001010101"))
                ^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 1.0819 seconds

  ----Wall Time----  ----Name----
    1.0804 ( 99.9%)  FIR Parser
    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    Parse OMIR
    1.0183 ( 94.1%)    Parse modules
    0.0016 (  0.1%)  Rest
    1.0819 (100.0%)  Total

{
  totalTime: 1.095,
  maxMemory: 168665088
}
